# aablty-backend

./: .gitignore  README.md  aablty.db-journal  pyproject.toml  run.py
src/aablty_backend/: auth.py  config.py  crud.py  db.py  main.py  models.py  schemas.py  utils.py
src/aablty_backend/routes/: certifications.py  cv.py  education.py  facts.py  projects.py  public.py  skills.py
